# meridian-web

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
bazel/: BUILD.bazel  panel_bundle.bzl
src/: BUILD.bazel  api.ts  assistant_panel.ts  browser.ts  chat_panel.ts  declarative_worker_runtime.ts  dom.ts  index.ts  patch.ts  proto_json.ts  styles.ts  templates.ts  terminal_panel.ts  terminal_panel_css.ts  tsconfig.json  worker-command.schema.json  workers.ts
src/types/: global.d.ts
src/uiview/: index.ts  renderer.ts  transport.ts  types.ts  view_renderer.ts  web_components_renderer.ts  web_renderer.ts
tests/: BUILD.bazel  browser_exports.test.ts  conformance.test.ts  conformance_wasm.test.ts  content.test.ts  dom.test.ts  fixtures.ts  grammar.test.ts  patch.test.ts  proto_json.test.ts  stat.test.ts  supported_bodies.test.ts  table_stream.test.ts  workers.test.ts
theme/: BUILD.bazel  README.md
theme/web/: meridian.css  theme.ts
