load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

# Links the npm deps (@savvifi/meridian-proto-ts + @savvifi/meridian-schemas +
# @bufbuild/protobuf, from the pnpm lockfile) into the workspace node_modules so
# //src:core resolves them. The web-components toolkit is consumed by hosts as
# the Bazel target //src:core (botnoc links it); it is not linked first-party here.
npm_link_all_packages(name = "node_modules")

exports_files([
    "package.json",
    "pnpm-lock.yaml",
    "pnpm-workspace.yaml",
    "tsconfig.json",
])
