load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@rules_vite//vite:defs.bzl", "vitest_test")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "src_lib",
    srcs = [
        "//src:core",
    ],
)

vitest_test(
    name = "unit",
    srcs = [
        "dom.test.ts",
        "patch.test.ts",
        "proto_json.test.ts",
        "workers.test.ts",
    ],
    deps = [
        "//:node_modules/vitest",
        ":src_lib",
    ],
)

# Render conformance + the binary-boundary guard for the B1 canonical/binpb
# rewrite: each shape fixture renders through renderPanel into jsdom, with a mock
# wasm that fromBinary-validates every Uint8Array the renderer emits.
vitest_test(
    name = "conformance",
    srcs = [
        "conformance.test.ts",
        "fixtures.ts",
    ],
    deps = [
        "//:node_modules/@bufbuild/protobuf",
        "//:node_modules/@savvifi/meridian-proto-ts",
        "//:node_modules/jsdom",
        "//:node_modules/vitest",
        ":src_lib",
    ],
)
