load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@rules_vite//vite:defs.bzl", "vitest_test")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "src_lib",
    srcs = [
        "//src:core",
    ],
)

vitest_test(
    name = "unit",
    srcs = [
        "dom.test.ts",
        "patch.test.ts",
        "proto_json.test.ts",
        "workers.test.ts",
    ],
    deps = [
        "//:node_modules/vitest",
        ":src_lib",
    ],
)

# Render conformance + the binary-boundary guard for the B1 canonical/binpb
# rewrite: each shape fixture renders through renderPanel into jsdom, with a mock
# wasm that fromBinary-validates every Uint8Array the renderer emits.
vitest_test(
    name = "conformance",
    srcs = [
        "conformance.test.ts",
        "fixtures.ts",
    ],
    deps = [
        "//:node_modules/@bufbuild/protobuf",
        "//:node_modules/@savvifi/meridian-proto-ts",
        "//:node_modules/jsdom",
        "//:node_modules/vitest",
        ":src_lib",
    ],
)

# The six brand-neutral content shapes (choice / snippet / action / connect_flow /
# copy_value / catalog) rendered through renderPanel into jsdom — field-complete
# (icon seam, descriptions, snippet language, secret reveal, placeholder).
vitest_test(
    name = "content",
    srcs = [
        "content.test.ts",
        "fixtures.ts",
    ],
    deps = [
        "//:node_modules/@bufbuild/protobuf",
        "//:node_modules/@savvifi/meridian-proto-ts",
        "//:node_modules/jsdom",
        "//:node_modules/vitest",
        ":src_lib",
    ],
)

# GrammarPanel — content negotiation + the degradation ladder (native markdown /
# host renderer / alt / source), rendered through renderPanel into jsdom.
vitest_test(
    name = "grammar",
    srcs = [
        "fixtures.ts",
        "grammar.test.ts",
    ],
    deps = [
        "//:node_modules/@bufbuild/protobuf",
        "//:node_modules/@savvifi/meridian-proto-ts",
        "//:node_modules/jsdom",
        "//:node_modules/vitest",
        ":src_lib",
    ],
)

# StatPanel — the KPI tile (computed delta/trend via the shared computeStat + an
# SVG sparkline).
vitest_test(
    name = "stat",
    srcs = [
        "fixtures.ts",
        "stat.test.ts",
    ],
    deps = [
        "//:node_modules/@bufbuild/protobuf",
        "//:node_modules/@savvifi/meridian-proto-ts",
        "//:node_modules/@savvifi/meridian-schemas",
        "//:node_modules/jsdom",
        "//:node_modules/vitest",
        ":src_lib",
    ],
)
